--- a/edg-mkgridmap.conf
+++ b/edg-mkgridmap.conf
@@ -54,9 +54,6 @@ group vomss://voms.opensciencegrid.org:8443/voms/osg osg
 # USER-VO-MAP osgedu OSGEDU -- 24 -- Rob Quick (rquick@iupui.edu)    
 group vomss://voms.grid.iu.edu:8443/voms/osgedu osgedu
 #-------------------
-# USER-VO-MAP nwicg nwicg -- 25 -- Kevin Colby (colbykd@purdue.edu)    
-group vomss://vo.rcac.purdue.edu:8443/voms/NWICG nwicg
-#-------------------
 # USER-VO-MAP ops OPS -- 26 -- Rob Quick (rquick@iupui.edu)    
 group vomss://voms.cern.ch:8443/voms/ops ops
 #-------------------
@@ -74,7 +71,7 @@ group vomss://voms.grid.iu.edu:8443/voms/Engage engage
 group vomss://voms.fnal.gov:8443/voms/ilc ilc
 #-------------------
 # USER-VO-MAP nysgrid NYSGRID -- 32 -- Steve Gallo (smgallo@ccr.buffalo.edu)
-group vomss://dylan.ccr.buffalo.edu:8443/voms/NYSGRID nysgrid
+group vomss://dylan.ccr.buffalo.edu:8443/voms/nysgrid nysgrid
 #-------------------
 # USER-VO-MAP sbgrid SBGrid -- 33 -- Ian Levesque (ian@crystal.harvard.edu)
 group vomss://hpc.sbgrid.org:8443/voms/SBGrid sbgrid
@@ -142,5 +139,8 @@ group vomss://voms.fnal.gov:8443/voms/lqcd lqcd
 #USER-VO-MAP auger Auger - 57 - Jiri Chudoba (jiri.chudoba@cern.ch)
 group vomss://voms1.egee.cesnet.cz:8443/voms/auger auger
 #-------------------
-#USER-VO-MAP auger glast.org - 58 - Michael Kuss (Michael.Kuss@pi.infn.it)
+#USER-VO-MAP glast.org glast.org - 58 - Michael Kuss (Michael.Kuss@pi.infn.it)
 group vomss://voms2.cnaf.infn.it:8443/voms/glast.org glast.org
+#-------------------
+#USER-VO-MAP enmr ENMR - 59 - Marco Verlato (Marco.Verlato@pd.infn.it)
+group vomss://voms2.cnaf.infn.it:8443/voms/enmr.eu enmr
