--- a/edg-mkgridmap.conf
+++ b/edg-mkgridmap.conf
@@ -144,3 +144,6 @@ group vomss://voms2.cnaf.infn.it:8443/voms/glast.org glast.org
 #-------------------
 #USER-VO-MAP enmr ENMR - 59 - Marco Verlato (Marco.Verlato@pd.infn.it)
 group vomss://voms2.cnaf.infn.it:8443/voms/enmr.eu enmr
+#-------------------
+#USER-VO-MAP osgcrossce OSGCrossCE - 60 - Igor Sfiligoi (sfiligoi@fnal.gov)
+group vomss://voms.grid.iu.edu:8443/voms/osgcrossce osgcrossce
