--- a/edg-mkgridmap.conf
+++ b/edg-mkgridmap.conf
@@ -50,6 +50,7 @@ group vomss://voms.fnal.gov:8443/voms/i2u2 i2u2
 #-------------------
 # USER-VO-MAP osg OSG -- 23 -- Rob Quick (rquick@iupui.edu)    
 group vomss://voms.opensciencegrid.org:8443/voms/osg osg
+group vomss://voms.grid.iu.edu:8443/voms/osg osg
 #-------------------
 # USER-VO-MAP osgedu OSGEDU -- 24 -- Rob Quick (rquick@iupui.edu)    
 group vomss://voms.grid.iu.edu:8443/voms/osgedu osgedu
