--- a/edg-mkgridmap.conf
+++ b/edg-mkgridmap.conf
@@ -15,9 +15,9 @@ group vomss://voms.grid.iu.edu:8443/voms/mis mis
 group vomss://vo.racf.bnl.gov:8443/voms/star star
 #-------------------
 # USER-VO-MAP atlas ATLAS -- 10 -- (usatlas-support-l@lists.bnl.gov)      
-group vomss://voms.cern.ch:8443/voms/atlas/ usatlas1 
+group vomss://voms.cern.ch:8443/voms/atlas usatlas1 
 group vomss://voms.cern.ch:8443/voms/atlas/?/atlas/usatlas usatlas3 
-group vomss://voms.cern.ch:8443/voms/atlas/ usatlas4 
+group vomss://voms.cern.ch:8443/voms/atlas usatlas4 
 #-------------------
 # USER-VO-MAP cms CMS -- 11 -- (uscms-ops@fnal.gov)      
 group vomss://voms.cern.ch:8443/voms/cms uscms01
@@ -148,3 +148,9 @@ group vomss://voms2.cnaf.infn.it:8443/voms/enmr.eu enmr
 #-------------------
 #USER-VO-MAP osgcrossce OSGCrossCE - 60 - Igor Sfiligoi (sfiligoi@fnal.gov)
 group vomss://voms.grid.iu.edu:8443/voms/osgcrossce osgcrossce
+#-------------------
+#USER-VO-MAP vo.cta.in2p3.fr CTA - 61 - Arrabito (arrabito@in2p3.fr)
+group vomss://cclcgvomsli01.in2p3.fr:8443/voms/vo.cta.in2p3.fr vo.cta.in2p3.fr
+#-------------------
+#USER-VO-MAP xenon.biggrid.nl XENON - 62 - Alfio Rizzo (ar3081@columbia.edu)
+group vomss://voms.grid.sara.nl:8443/voms/xenon.biggrid.nl xenon.biggrid.nl
