--- a/edg-mkgridmap.config
+++ b/edg-mkgridmap.config
@@ -16,11 +16,15 @@ group vomss://vo.racf.bnl.gov:8443/voms/star star
 #-------------------
 # USER-VO-MAP atlas ATLAS -- 10 -- (usatlas-support-l@lists.bnl.gov)      
 group vomss://voms.cern.ch:8443/voms/atlas usatlas1 
+group vomss://voms2.cern.ch:8443/voms/atlas usatlas1 
 group vomss://voms.cern.ch:8443/voms/atlas/?/atlas/usatlas usatlas3 
+group vomss://voms2.cern.ch:8443/voms/atlas/?/atlas/usatlas usatlas3 
 group vomss://voms.cern.ch:8443/voms/atlas usatlas4 
+group vomss://voms2.cern.ch:8443/voms/atlas usatlas4 
 #-------------------
 # USER-VO-MAP cms CMS -- 11 -- (uscms-ops@fnal.gov)      
 group vomss://voms.cern.ch:8443/voms/cms uscms01
+group vomss://voms2.cern.ch:8443/voms/cms uscms01
 group vomss://voms.fnal.gov:8443/voms/cms uscms01
 #-------------------
 # USER-VO-MAP ligo LIGO -- 12 -- Patrick Brady (patrick@gravity.phys.uwm.edu)    
